src/styles.css
#about {
  background-color: rgba(92,168,188,1);
  margin: 0;
}

.contact {
  background-color: rgb(178,1,107);
  margin: 0;
}

.footer {
    text-align: center;
    background-color: #427ba3;
    padding-top: 25px;
    padding-bottom: 25px;
    color: white;
    margin: 0;
}

#ink img{
  width: 80%;
  height: 65pc;
}

.header {
    text-align: center;
    background-color: #427ba3;
    padding-top: 25px;
    padding-bottom: 25px;
    color: white;
    margin: 0;
}

li {
  font-size: 16px;
}

#main-col h2 {
  color: #427ba3;
}

.name {
  margin-left: 40%;
}

.nav a {
    font-size: 25px;
    text-align: left;
    color: white;
}

.nav a:hover {
    text-decoration: underline;
    color: #427ba3;
}

p {
  font-size: 16px;
}

.pics {
  background-color: rgb(0,68,84);
  margin: 0;
}

.pics img {
  height: 300%;
  width: 34%;
  margin-left: 14%;
  margin-right: 14%;
}

.proficent {
  text-decoration: underline;
}

#resume-container {
  border: solid 4px;
  border-color: #2b3342;
  border-style: inset;
  margin-bottom: 20px;
}

#side-col h2 {
  color: #427ba3;
}

.screenshot {
  height: 450px;
  width: 450px;
  border-color: #2b3342;
  border: solid 4px;
  border-style: inset;
}

.screenshot2 {
  height: 450px;
  width: 450px;
  border-color: #2b3342;
  border: solid 4px;
  border-style: inset;
}

.screenshot3 {
  height: 400px;
  width: 700px;
  border-color: #2b3342;
  border: solid 4px;
  border-style: inset;
  display: block;
  margin: 0 auto;
  margin-top: 10px;
  margin-bottom: 10px;
}

.screenshot4 {
  height: 700px;
  width: 300px;
  border-color: #2b3342;
  border: solid 4px;
  border-style: inset;
  display: block;
  margin: 0 auto;
  margin-top: 10px;
  margin-bottom: 10px;
}

.screenshot5 {
  height: 200px;
  width: 200px;
  border-color: #2b3342;
  border: solid 4px;
  border-style: inset;
  margin-left: 80px;
  margin-right: 80px;
  margin-top: 15px;
  margin-bottom: 15px;
}

